<resources>
    <string name="see_It">볼래요!</string>



    <string name="app_name">어라운드</string>
    <string name="title_main"> 메인</string>
    <string name="title_map"> 지도</string>
    <string name="title_my"> 마이 페이지</string>
    <string name="searching"> Search...</string>

    <string name="edit_titile">글쓰기</string>
    <string name="writing_titile">제목</string>
    <string name="writing_type">유형</string>

    <string name="writing_type_concert">공연</string>
    <string name="writing_type_party">파티</string>
    <string name="writing_type_comfort">편의</string>
    <string name="writing_type_sightseeing">관광</string>
    <string name="writing_type_gallery">전시</string>
    <string name="writing_type_food">맛집</string>
    <string name="writing_type_shopping">쇼핑</string>
    <string name="writing_type_event">행사</string>

    <string name="writing_text">내용</string>
    <string name="writing_during">기간</string>
    <string name="writing_during_start">시작</string>
    <string name="writing_during_end">종료</string>
    <string name="writing_image">사진</string>
    <string name="writing_tag">태그</string>
    <string name="writing_tag_add">태그 추가</string>
    <string name="writing_location">위치</string>
    <string name="writing_location_select">위치 지정</string>
    <string name="writing_complete">게시</string>

    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>

    <string-array name="rest_tags">
        <item>일식</item>
        <item>중식</item>
        <item>한식</item>
        <item>중식</item>
        <item>양식</item>
        <item>맛집</item>
        <item>이벤트</item>
        <item>분위기 좋은</item>
        <item>저렴한</item>
        <item>가족과 함께</item>
        <item>애인과 함께</item>
        <item>맥주</item>
        <item>와인</item>
        <item>24시간</item>
        <item>치킨</item>
        <item>포장가능</item>
        <item>카페</item>
        <item>빵집</item>
        <item>인기맛집</item>
    </string-array>

    <string-array name="con_tags">
        <item>재즈</item>
        <item>락</item>
        <item>내한공연</item>
        <item>클래식</item>
        <item>코메디</item>
        <item>힙스터</item>
        <item>단독공연</item>
        <item>신나는</item>
        <item>조용한</item>
        <item>독특한</item>
        <item>놀기좋은</item>
        <item>파티</item>
        <item>힙합</item>
        <item>축제</item>
        <item>인터네셔널</item>
        <item>데이트</item>
        <item>뮤지컬</item>
        <item>영화</item>
        <item>한강</item>
    </string-array>

    <string-array name="event_tags">
        <item>대박할인</item>
        <item>화장품</item>
        <item>수입과자</item>
        <item>1+1</item>
        <item>증정품</item>
        <item>사은품</item>
        <item>선물용</item>
        <item>행사</item>
        <item>시즌오프</item>
        <item>특가</item>
        <item>여름상품</item>
        <item>캐릭터</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">일반</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">닉네임 설정</string>
    <string name="pref_default_display_name">닉네임</string>

    <string name="pref_title_set_radius">반경 설정</string>
    <string name="pref_summary_set_radius">맵에서 확인하고 알림을 받을 반경을 설정 합니다.</string>
    <string-array name="meters">
        <item>100</item>
        <item>200</item>
        <item>500</item>
        <item>1000</item>
        <item>1500</item>
        <item>2000</item>
        <item>3000</item>
        <item>5000</item>
    </string-array>

    <string-array name="meters_titles">
        <item>100m</item>
        <item>200m</item>
        <item>500m</item>
        <item>1km</item>
        <item>1.5km</item>
        <item>2km</item>
        <item>3km</item>
        <item>5km</item>
    </string-array>


    <string name="pref_title_set_categories">관심 항목 설정</string>
    <string name="pref_summary_set_categories">알림을 받을 항목을 설정 합니다.</string>

    <string-array name="pref_categories">
        <item>공연</item>
        <item>파티</item>
        <item>편의</item>
        <item>관광</item>
        <item>전시</item>
        <item>맛집</item>
        <item>쇼핑</item>
        <item>행사</item>
    </string-array>
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">알림</string>

    <string name="pref_title_new_message_notifications">알림을 활성화 합니다.</string>

    <string name="pref_title_ringtone">알림음 설정</string>
    <string name="pref_ringtone_silent">무음</string>

    <string name="pref_title_vibrate">진동</string>

    <string-array name="empty_array" translatable="false">
        <item></item>
    </string-array>


    <string name="pref_header_theme">테마</string>
    <string name="pref_title_theme_color">색상 설정</string>
    <string-array name="pref_theme_color_name">
        <item>빨강</item>
        <item>초록</item>
        <item>파랑</item>
    </string-array>
    <string-array name="pref_theme_color_values">
        <item>#FF0000</item>
        <item>#00FF00</item>
        <item>#0000FF</item>
    </string-array>
    <string name="pref_summary_set_color">어플의 색상을 결정 합니다.</string>
</resources>
