<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="nickname_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="100"
        android:entries="@array/meters_titles"
        android:entryValues="@array/meters"
        android:key="radius_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_set_radius"
        android:summary="@string/pref_summary_set_radius"
        />

    <MultiSelectListPreference
        android:defaultValue="@array/empty_array"
        android:key="category_list"
        android:entries="@array/pref_categories"
        android:entryValues="@array/pref_categories"
        android:title="@string/pref_title_set_categories"
        android:summary="@string/pref_summary_set_categories"
        />

</PreferenceScreen>
